test/Fail/AnonymousRecConstrParse.err
AnonymousRecConstrParse.agda:3,5-5
AnonymousRecConstrParse.agda:3,5: Parse error
constructor<ERROR>

...
